Added a product name

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
+  "productName": "Kuru Anime",
   "scripts": {
     "start": "electron ."
   },
