--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "author": "GitHub",
   "license": "CC0-1.0",
-  "dependencies": {
+  "devDependencies": {
     "electron": "^5.0.2"
   }
 }
